fix: minor layout fix, 3 text corrections in english

--- a/project/translations/en/LC_MESSAGES/messages.po
+++ b/project/translations/en/LC_MESSAGES/messages.po
@@ -255,7 +255,7 @@ msgstr ""
 "Are you also constantly gripped by the desire to travel and the longing "
 "to go out into the world? Travel with your stones to the end of the world"
 " or to your front garden. The exhibition is a virtual collection of your "
-"favourite stones from somewhere in the world and the history you "
+"favourite stones from anywhere in the world and the story you "
 "associate with them. In the exhibition you can discover more about our "
 "jointly created stone collection, its locations and learn about the "
 "personal and geological stories associated with it."
@@ -551,7 +551,7 @@ msgid ""
 " für Sie?"
 msgstr ""
 "Write your personal story about the stone and the place where you found "
-"it or the journey: Why did you choose the stone for the exhibition? Why "
+"it or the journey. Ideas: Why did you choose the stone for the exhibition? Why "
 "and with whom did you go to the location where it was found? What do you "
 "like to remember when you think of the journey? What does the memory mean"
 " to you?"
